# un-organized

./: .env.example  .gitignore  .prettierrc  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: nextjs.yml
docs/: organigram_known_issues.md  organigram_notes.md
public/data/: organigrams-2026.json
python/: a_download.py  b_extract_organigrams.py  c_extract_organigrams.py  c_extract_vision.py  d_export_webapp.py  main.py  section_names.json
sql/: auth_tables.sql
src/: proxy.ts
src/app/: error.tsx  layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/api/auth/check-entity/: route.ts
src/app/api/auth/logout/: route.ts
src/app/api/auth/request/: route.ts
src/app/api/auth/verify/: route.ts
src/app/api/documents/search/: route.ts
src/app/login/: layout.tsx  page.tsx
src/app/verify/: page.tsx
src/components/: DocumentSearch.tsx  EntityChangeDialog.tsx  EntityCombobox.tsx  Footer.tsx  Header.tsx  SearchDemo.tsx  UserMenu.tsx
src/components/organigram/: OrgTree.tsx  PartTree.tsx  Treemap.tsx  UnitDetail.tsx
src/components/organigram/layouts/: DrillTreemap.tsx  Icicle.tsx  NestedTreemap.tsx  SectionTreemap.tsx  Sunburst.tsx  hooks.ts
src/components/ui/: dialog.tsx  dropdown-menu.tsx  popover.tsx  select.tsx
src/features/auth/: commands.ts  mail.ts  service.ts
src/features/auth/ui/: LoginForm.tsx  VerifyForm.tsx
src/lib/: get-base-url.ts  organigram.ts
src/lib/data/: entities.ts
src/lib/db/: config.ts  db.ts
src/types/: organigram.ts
