[project]
name = "un-website-boilerplate"
version = "0.1.0"
description = "UN Website Boilerplate"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "joblib>=1.5.3",
    "natsort>=8.4.0",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.3.4",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "tqdm>=4.68.3",
]
